--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+NEXTAUTH_URL=https://authenticationjs.vercel.app
+NEXTAUTH_SECRET=78400364427c0b99e73e3a18559256b4
 
 
 AUTH0_ID=
@@ -12,8 +12,8 @@ DESCOPE_SECRET=
 FACEBOOK_ID=
 FACEBOOK_SECRET=
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=74330365a037aee01688
+GITHUB_SECRET=51038400674b1ac2c9d62f2b8c1e901ffebb5d54
 
 GOOGLE_ID=
 GOOGLE_SECRET=
