--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
   "private": true,
-  "description": "An example project for NextAuth.js with Next.js",
-  "repository": "https://github.com/nextauthjs/next-auth-example.git",
-  "bugs": {
-    "url": "https://github.com/nextauthjs/next-auth/issues"
-  },
-  "homepage": "https://next-auth-example.vercel.app",
+  "name": "authentication",
+  "version": "0.1.0",
+  "description": "Real-World Working example of authjs.",
+  "repository": "https://github.com/KSinghofficial/authentication.git",
+  "homepage": "https://authenticationjs.vercel.app",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start"
   },
-  "author": "Iain Collins <me@iaincollins.com>",
-  "contributors": [
-    "Balázs Orbán <info@balazsorban.com>",
-    "Nico Domino <yo@ndo.dev>",
-    "Lluis Agusti <hi@llu.lu>"
-  ],
-  "dependencies": {
+ "dependencies": {
     "next": "latest",
     "next-auth": "latest",
     "react": "^18.2.0",
